--- a/Projeto-Clothing/package.json
+++ b/Projeto-Clothing/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "clear": "^0.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
+    "express-validator": "^6.14.2",
+    "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
